<resources>
    <string name="app_name">Pr-10 var-3</string>
    <string name="text_text">моё смарт-устройство</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="_1_3_km">1.3 km</string>
    <string name="_59_kcal">59 kcal</string>
    <string name="_30_min">30 min</string>
    <string name="_1583_steps">1583 steps</string>
    <string name="_62_kg">62 kg</string>
    <string name="_82_bmp">82 bmp</string>
</resources>